# llm-shell

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.interface  Makefile  README.md  docker-compose.yaml  llama.Modelfile  redis.conf
backend/: main.py  ollama.py  requirements.txt
llm_shell/: config-template.yaml  config.yaml  pyproject.toml  requirements.txt
llm_shell/llm_shell/: chat_cli.py  context_store.py  search.py
model_files/: wizard-coder-python-7b.Modelfile
web-interface/: main.py  ollama.py
