[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["llm_shell"]

[project.optional-dependencies]
dev = ["jupyter"]

[project]
name = "llm_shell"
version = "0.0.1"
description = "<description>"
dynamic = ["dependencies", "readme"]

[project.scripts]
llm-shell = "llm_shell.chat_cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"]}